test/bad0.cminor
yIntArray : array [xInt] integer; // error
zIntArray : array [] integer; // error
